--- a/public/about.html
+++ b/public/about.html
@@ -33,13 +33,14 @@
             </div>
             <!-- main content area -->
             <div class="col-sm-11">
+            	<div id="mission"></div>
                 <div id="profiles", style="text-align: center">
 
                 </div>
             </div>
         </div>
     </div>
-
+    
     <div id="footer"></div>
 
 
@@ -65,6 +66,7 @@
         $(function () {
             $("#header").load("header.html");
             $("#footer").load("footer.html");
+            $("#mission").load("mission.html");
             loadProfiles();
         });
     </script>
