New branch for my messing around. Will later merge when things not mess

--- a/public/about.html
+++ b/public/about.html
@@ -34,6 +34,7 @@
             <!-- main content area -->
             <div class="col-sm-11">
             	<div id="mission"></div>
+            	<h2 style="text-align: center">Meet the E-board</h2>
                 <div id="profiles", style="text-align: center">
 
                 </div>
