--- a/public/company_card.html
+++ b/public/company_card.html
@@ -1,4 +1,4 @@
-<div class="card m-3" style="width: 20rem; text-align: center">
+<div class="card m-3" style="width: 20rem; text-align: center; border: none">
     <!-- src and alt attributes should be set in utlis.js -->
     <img class="card-img-top" src="" alt="">
     <!--<div class="card-body" style="max-height: 10rem">
