--- a/public/footer.html
+++ b/public/footer.html
@@ -4,7 +4,7 @@
             <div class="col 2-p">
                 <h4>Contact Us</h4>
                 <p>Email: <a href="mailto:ieee@ece.cornell.edu">ieee@ece.cornell.edu</a></p>
-                <pre>Co-Presidents:          Kevin Ying and Caroline Chu</br>Corporate Director:     Laasya Renganathan</br>Social Director:        Alex Li</br>Publicity Director:     Joy Thean</br>
+                <pre>Co-Presidents:          Alexander Li and Laasya Renganathan</br>Corporate Director:     Daniel Buscaglia</br>Social Co-Directors:    Aditi Agarwal and Vaishnavi Dhulkhed</br>Publicity Director:     Crystal Wu</br>
                 </pre>
             </div>
             <div class="col 2-p">
