--- a/public/about.html
+++ b/public/about.html
@@ -27,10 +27,10 @@
 
     <div class="container">
         <div class="row">
-            <!-- sidebar, which will move to the top on a small screen -->
+            <!-- sidebar, which will move to the top on a small screen 
             <div class="sidebar">
                 <nav id="toc" data-toggle="toc" class="sticky-top"></nav>
-            </div>
+            </div>-->
             <!-- main content area -->
             <div class="col-sm-11">
             	<div id="mission"></div>
