--- a/public/sponsors.html
+++ b/public/sponsors.html
@@ -27,15 +27,12 @@
 
     <div class="container">
         <div class="row">
-            <!-- sidebar, which will move to the top on a small screen -->
-            <div class="sidebar">
-                <nav id="toc" data-toggle="toc" class="sticky-top"></nav>
-            </div>
             <!-- main content area -->
-            <div class="col-sm-11">
+            <div class="col-sm-12">
                 <div id="companies", style="text-align: center">
-                    <!--<h2 style="text-align: center">Meet the E-board</h2>-->
+                    <h2 style="text-align: center">Thank you to our sponsors!</h2>
                 </div>
+                <p> </br> </br> </br></p>
             </div>
         </div>
     </div>
