--- a/public/header.html
+++ b/public/header.html
@@ -29,7 +29,10 @@
                 <a href="/sponsors.html" class="nav-link">Sponsors</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">T-Shirt Designs</a>
+                <a href="/recruit.html" class="nav-link">Join IEEE!</a>
+            </li>
+            <li class="nav-item">
+                <a href="/merch.html" class="nav-link">Merch</a>
             </li>
         </ul>
     </div>
